crates/clan/clan-core/tests/snapshots/converter_golden__play2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Unidentified, MOT Unidentified
@ID:	eng|play_corpus|CHI|||||Unidentified|||
@ID:	eng|play_corpus|MOT|||||Unidentified|||
*CHI:	hello there . 1000_3500
*MOT:	how are you . 4000_6500
*CHI:	I am fine . 7000_9000
@End
