crates/clan/clan-core/tests/snapshots/converter_golden__praat2chat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	UNK
@Media:	dummy, video
@Bg:	Speaker1 hello world
@Bg:	Speaker1 goodbye now
@Eg:	Speaker1 hello world
@Eg:	Speaker1 goodbye now
@End
