crates/clan/clan-core/tests/snapshots/converter_golden__praat2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPE Unidentified
@ID:	eng|praat_corpus|SPE|||||Unidentified|||
*SPE:	hello world . 1000_3500
*SPE:	goodbye now . 4000_6500
@End
