crates/clan/clan-core/tests/snapshots/converter_golden__rtf2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Unidentified, MOT Unidentified
@ID:	eng|rtf_corpus|CHI|||||Unidentified|||
@ID:	eng|rtf_corpus|MOT|||||Unidentified|||
*CHI:	hello there . .
*MOT:	how are you ? .
@End
