crates/clan/clan-core/tests/snapshots/converter_golden__salt2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child, EXA Investigator
@ID:	eng|salt_corpus|CHI|||||Target_Child|||
@ID:	eng|salt_corpus|EXA|||||Investigator|||
*CHI:	Hello there .
*EXA:	How are you .
*CHI:	I am fine .
@End
