crates/clan/clan-core/tests/snapshots/converter_golden__srt2chat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	TXT Text
@ID:	eng|text|TXT|||||Text|||
@Media:	pipeout, audio
*TXT:	Hello world . 1000_3500
*TXT:	Goodbye now . 4000_6500
@End
