crates/clan/clan-core/tests/snapshots/converter_golden__srt2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPK Unidentified
@ID:	eng|srt_corpus|SPK|||||Unidentified|||
*SPK:	Hello world . 1000_3500
*SPK:	Goodbye now . 4000_6500
@End
