crates/clan/clan-core/tests/snapshots/converter_golden__text2chat@clan.snap
---
source: tests/converter_golden.rs
expression: "&clan_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	TXT Text
@ID:	eng|text|TXT|||||Text|||
*TXT:	Hello there.
*TXT:	How are you?
*TXT:	I am fine!
@End
