crates/clan/clan-core/tests/snapshots/converter_golden__text2chat@rust.snap
---
source: tests/converter_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	SPK Unidentified
@ID:	eng|text_corpus|SPK|||||Unidentified|||
*SPK:	Hello there .
*SPK:	How are you ?
*SPK:	I am fine !
@End
